<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera</string>
    <string name="settings_title">Settings</string>
    <string name="photo_mode">PHOTO</string>
    <string name="video_mode">VIDEO</string>
    <string name="permission_rationale">Camera and microphone access are required to use this app.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="photo_resolution">Photo Resolution</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="back_camera">Back Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="save">Save</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_auto">Flash Auto</string>
</resources>
